--- a/package.json
+++ b/package.json
@@ -40,11 +40,16 @@
     "typos": "chmod +x scripts/check_typos.sh && ./scripts/check_typos.sh"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.4",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.5",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.5",
     "@nestjs/platform-fastify": "^10.4.5",
+    "@nestjs/swagger": "^7.4.2",
+    "@types/express": "^5.0.0",
+    "class-transformer": "^0.5.1",
+    "express": "^4.21.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
