--- a/package.json
+++ b/package.json
@@ -45,11 +45,19 @@
     "@nestjs/common": "^10.4.5",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.5",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.4.5",
     "@nestjs/swagger": "^7.4.2",
     "@types/express": "^5.0.0",
+    "@types/joi": "^17.2.3",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "express": "^4.21.1",
+    "joi": "^17.13.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -80,6 +88,7 @@
     "lint-staged": "^15.2.10",
     "nock": "^13.5.5",
     "nyc": "^17.1.0",
+    "passport-local": "^1.0.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
