feat: added repository, guard, strategy, prisma client

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "unicorn/prefer-module": "off",
     "unicorn/prefer-top-level-await": "off",
     "unicorn/prevent-abbreviations": "off",
+    "unicorn/no-null": "off",
     "no-console": "warn",
     "node/no-missing-import": "off",
     "node/no-unsupported-features/es-syntax": [
