--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "@types/passport-local": "^1.0.38",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-transform": "^0.7.0",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "passport": "^0.7.0",
