--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "moduleResolution": "Bundler",
     "esModuleInterop": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "outDir": "dist",
     "sourceMap": true,
     "inlineSources": true,
