feat: added repository, guard, strategy, prisma client

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "@fastify/static": "^7.0.4",
+    "@hashgraph/cryptography": "^1.4.8-beta.10",
+    "@hashgraph/sdk": "^2.52.0",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.5",
     "@nestjs/config": "^3.2.3",
@@ -48,13 +50,9 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-fastify": "^10.4.5",
+    "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.21.1",
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^5.0.0",
-    "@types/joi": "^17.2.3",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-transform": "^0.7.0",
@@ -64,6 +62,7 @@
     "joi": "^17.13.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "pino-pretty": "^11.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -76,8 +75,13 @@
     "@nestjs/testing": "^10.4.5",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.36",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/joi": "^17.2.3",
     "@types/node": "^20.16.13",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
@@ -95,7 +99,6 @@
     "lint-staged": "^15.2.10",
     "nock": "^13.5.5",
     "nyc": "^17.1.0",
-    "passport-local": "^1.0.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
